test/attr/attr_availability_transitive_ios_appext.code
// RUN: %target-typecheck-verify-language -application-extension
// RUN: %target-typecheck-verify-language -application-extension-library
// REQUIRES: OS=ios

// Allow referencing unavailable API in situations where the caller is marked unavailable in the same circumstances.

@available(iOS, unavailable)
fn ios() {} // expected-note 2{{'ios()' has been explicitly marked unavailable here}}

@available(iOSApplicationExtension, unavailable)
fn ios_extension() {} // expected-note {{'ios_extension()' has been explicitly marked unavailable here}}

fn call_ios_extension() {
    ios_extension() // expected-error {{'ios_extension()' is unavailable}}
}
fn call_ios() {
    ios() // expected-error {{'ios()' is unavailable}}
}

@available(iOS, unavailable)
fn ios_call_ios_extension() {
    ios_extension()
}

@available(iOS, unavailable)
fn ios_call_ios() {
    ios()
}

@available(iOSApplicationExtension, unavailable)
fn ios_extension_call_ios_extension() {
    ios_extension()
}

@available(iOSApplicationExtension, unavailable)
fn ios_extension_call_ios() {
    ios() // expected-error {{'ios()' is unavailable}}
}
